Portfolio first draft

--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
-Hello World
+
+<!DOCTYPE html>
+<html>
+    <!-- Head includes files such as css and js, wont be seen -->
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+        <title>John Teo Portfolio</title>
+         <!-- Title is the name you see on the tab/link -->
+         <link rel="stylesheet" type="text/css" href="style.css">
+         <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet">
+    </head>
+
+    <!-- Body is the content that people see on the website -->
+    <body>
+        <nav>
+            <div class="navcontent">
+                <div>
+                    <a href="index.html"><p class="logo">JOHN</p></a>
+                </div>
+                <div>
+                    <ul class="navigationlist">
+                        <!-- a means links -->
+                        <li><a href="index.html"><p>Works</p></a></li>
+                        <li><a href="doodles.html"><p>Doodles</p></a></li>
+                        <li><a href="about.html"><p>About</p></a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <h2 class="title">Hello. I'm John Teo, a designer who blah blah.</h2>
+
+        <div class ="mainbody-02">
+            <h4 class="subheader">Currently a service and interaction designer at Fjord Singapore. Here are some of the works I've done.</h4>
+        </div>
+
+        <!-- Grid -->
+        <div class="row">
+            <div class="column">
+                    <div class="box">
+                <img src ="Images/coming.png"/>
+                </div>
+                <h4>Upskilling Digital <br>Proficiency</h4>
+                <h5>Petronas</h5>
+            </div>
+            <div class="column middle">
+                    <div class="box">
+                <img src ="Images/bizregistry-00.jpg"/>
+                </div>
+                <h4>The Future of <br>Retail Banking</h4>
+                <h5>Accenture</h5>
+            </div>
+            <a href="pivot.html"><div class="column">
+                    <div class="box">
+                <img src ="Images/oilandgas-00.jpg"/>
+                </div>
+                <h4><br>Visualizing Data</h4>
+                <h5>Oil and Gas Company</h5>
+            </div></a>
+        </div>
+
+        <div class="row">
+            <a href="airline.html"><div class= "column">
+                    <div class="box">
+                <img src ="Images/airline-00.jpg"/>
+                </div>
+                <h4>A Beacon for Better <br> Customer Experience</h4>
+                <h5>Airline</h5>
+            </div></a>
+            <a href="dbs.html"><div class="column middle">
+                <div class="box">
+                     <img src ="Images/dbs-00.jpg"/>
+                </div>
+                <h4><br>Redesigning the ATM</h4>
+                <h5>DBS</h5>
+            </div></a>
+            <div class="column">
+                    <div class="box">
+                <img src ="Images/afford-00.jpg"/>
+                </div>
+                <h4>Financial Empowerment <br> in a Cashless Society</h4>
+                <h5>Afford</h5>
+            </div>
+        </div>
+
+        <div class="row ">
+            <a href="aubergine.html">
+                <div class="column">
+                <div class="box">
+                    <img src ="Images/aubergine-00.jpg"/>
+                </div>
+                <h4><br>Comfort in a Puff</h4>
+                <h5>Studio Aubergine</h5>
+            </div>
+        </a>
+        </div>
+    </body>
+</html>
