--- a/doodles.html
+++ b/doodles.html
@@ -1,52 +1,132 @@
-
 <!DOCTYPE html>
 <html>
-    <!-- Head includes files such as css and js, wont be seen -->
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-        <title>John Teo Portfolio</title>
-         <!-- Title is the name you see on the tab/link -->
-         <link rel="stylesheet" type="text/css" href="style.css">
-         <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet">
-    </head>
+  <!-- Head includes files such as css and js, wont be seen -->
+  <head>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1"
+    />
+    <title>John Teo Portfolio</title>
+    <!-- Title is the name you see on the tab/link -->
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-    <!-- Body is the content that people see on the website -->
-    <body>
-        <nav>
-            <div class="navcontent">
-                <div>
-                    <a href="index.html"><p class="logo">JOHN</p></a>
-                </div>
-                <div>
-                    <ul class="navigationlist">
-                        <!-- a means links -->
-                        <li><a href="index.html"><p>Works</p></a></li>
-                        <li><a href="doodles.html"><p>Doodles</p></a></li>
-                        <li><a href="about.html"><p>About</p></a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+  <!-- Body is the content that people see on the website -->
+  <body>
+    <nav>
+      <div class="navcontent">
+        <div>
+          <a href="index.html"><p class="logo">JOHN</p></a>
+        </div>
+        <div>
+          <ul class="navigationlist">
+            <!-- a means links -->
+            <li>
+              <a href="index.html"><p>Works</p></a>
+            </li>
+            <li>
+              <a href="doodles.html"><p>Doodles</p></a>
+            </li>
+            <li>
+              <a href="about.html"><p>About</p></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-    <h2 class="title"> I like trying new things</h2>
+    <h2 class="title">I like trying new things</h2>
 
-    <div class ="mainbody-02">
-        <h4 class="subheader">From testing new softwares to prototyping random ideas, these are some stuff that I have worked on in my free time.</h4>
+    <div class="mainbody-02">
+      <h4 class="subheader">
+        From testing new softwares to prototyping random ideas, these are some
+        stuff that I have worked on in my free time.
+      </h4>
     </div>
 
-        <!-- Grid -->
-        <div class="row">
-            <div class="column nohover">
-                <img src ="Gifs/01.gif"/>
-            </div>
-            <div class="column middle nohover">
-                <img src ="Gifs/02.gif"/>
-            </div>
-            <div class="column nohover">
-                <img src ="Gifs/01.gif"/>
-            </div>
+    <!-- Grid -->
+    <div class="grid">
+      <div class="row">
+        <div class="column nohover">
+          <img src="Gifs/01.gif" />
         </div>
-
-
-    </body>
+        <div class="column middle nohover">
+          <img src="Gifs/02.gif" />
+        </div>
+        <div class="column nohover">
+          <img src="Gifs/01.gif" />
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div>
+        <a
+          href="https://www.linkedin.com/in/teorzjohn/"
+          class="sociallink"
+          target="_blank"
+        >
+          <svg
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fab"
+            data-icon="linkedin-in"
+            class="svg-inline--fa fa-linkedin-in fa-w-14"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+          >
+            <path
+              fill="currentColor"
+              d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          href="https://www.linkedin.com/in/teorzjohn/"
+          class="sociallink"
+          target="_blank"
+          ><svg
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fab"
+            data-icon="dribbble"
+            class="svg-inline--fa fa-dribbble fa-w-14"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 542"
+          >
+            <path
+              fill="currentColor"
+              d="M256 8C119.252 8 8 119.252 8 256s111.252 248 248 248 248-111.252 248-248S392.748 8 256 8zm163.97 114.366c29.503 36.046 47.369 81.957 47.835 131.955-6.984-1.477-77.018-15.682-147.502-6.818-5.752-14.041-11.181-26.393-18.617-41.614 78.321-31.977 113.818-77.482 118.284-83.523zM396.421 97.87c-3.81 5.427-35.697 48.286-111.021 76.519-34.712-63.776-73.185-116.168-79.04-124.008 67.176-16.193 137.966 1.27 190.061 47.489zm-230.48-33.25c5.585 7.659 43.438 60.116 78.537 122.509-99.087 26.313-186.36 25.934-195.834 25.809C62.38 147.205 106.678 92.573 165.941 64.62zM44.17 256.323c0-2.166.043-4.322.108-6.473 9.268.19 111.92 1.513 217.706-30.146 6.064 11.868 11.857 23.915 17.174 35.949-76.599 21.575-146.194 83.527-180.531 142.306C64.794 360.405 44.17 310.73 44.17 256.323zm81.807 167.113c22.127-45.233 82.178-103.622 167.579-132.756 29.74 77.283 42.039 142.053 45.189 160.638-68.112 29.013-150.015 21.053-212.768-27.882zm248.38 8.489c-2.171-12.886-13.446-74.897-41.152-151.033 66.38-10.626 124.7 6.768 131.947 9.055-9.442 58.941-43.273 109.844-90.795 141.978z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          href="https://www.instagram.com/johnthecaveman/"
+          class="sociallink"
+          target="_blank"
+          ><svg
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fab"
+            data-icon="instagram"
+            class="svg-inline--fa fa-instagram fa-w-14"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+          >
+            <path
+              fill="currentColor"
+              d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
+            ></path>
+          </svg>
+        </a>
+      </div>
+      <span class="copyright">Teo Ren Zhong John © 2020</span>
+    </footer>
+  </body>
 </html>
