add white outline

--- a/doodles.html
+++ b/doodles.html
@@ -52,13 +52,13 @@
     <div class="grid">
       <div class="row">
         <div class="column nohover">
-          <img src="Gifs/01.gif" />
+          <img class="gif" src="Gifs/01.gif" />
         </div>
         <div class="column middle nohover">
-          <img src="Gifs/02.gif" />
+          <img class="gif" src="Gifs/02.gif" />
         </div>
         <div class="column nohover">
-          <img src="Gifs/01.gif" />
+          <img class="gif" src="Gifs/01.gif" />
         </div>
       </div>
     </div>
