Portfolio second draft

--- a/airline.html
+++ b/airline.html
@@ -56,15 +56,22 @@
                 <p>From creating discussion guides to interviewing customers to synthesizing the findings, the Customer Experience team was taught on the intricacies of the design process. This often started out as a mini theory session before doing hands-on practice in the field. Side by side, both teams conducted field observations at the lounges and service centers, interviewing stakeholders, staff and customers to get a better understanding of the needs and pain points of both the business and the customers they served.</p>
             </div>
         </div>
-        <img src="Images/airline-02.png">
+        <div class="rightcontainer">
+            <img class="captionmb" src="Images/airline-02.png">
+            <span>Observing and interviewing staff and customers</span>
+        </div>
         <div class="mainbody-03">
             <p>The research accumulated to 5 high level themes which were later introduced to the staff in a workshop where we brought together multiple customer service and product development business units. Through this process, the organisation reached a common understanding of their customers and their journeys, coming up with several service concepts that were taken to cross-functional teams.</p>
         </div>
-        <img src="Images/airline-03.png">
+        <div class="rightcontainer">
+            <img class="captionmb" src="Images/airline-03.png">
+            <span>Bringing the organisation together for a workshop</span>
+        </div>
+        
         <h3>The Design</h3>
         <div class="projectdesign-01">
             <div class="designpicture-01">
-                <img class="imageflush" src="Images/coming.png"/>
+                <img class="imageflush" src="Images/airline-04.jpg"/>
             </div>
             <div class="mainbody-04">
                 <p>7 high-value service concepts were crafted collaboratively and taken into refinement. These concepts ranged from enhancing the inflight entertainment system to a new policy that empowered staff to make exceptions. Each service concept tackled several pain points that were identified during the research and how it would bring value for the business. <br><br>Update: The airline took forward 3 concepts and are currently testing it in the field.</p>
@@ -75,15 +82,16 @@
                 <p>Taking into consideration of the company’s core values, 6 design principles were created to help establish a framework for future decision making, providing guidance about what a right decision would be. Each design principle was further illustrated on what it meant for the product, people and process.</p>
             </div>
             <div class="designpicture-01">
-                <img class="imageflush" src="Images/coming.png"/>
+                <img class="imageflush" src="Images/airline-05.jpg"/>
             </div>
         </div>
         <div class="projectdesign-01">
                 <div class="designpicture-01">
-                    <img class="imageflush" src="Images/airline-06.png"/>
+                    <img class="imageflush" src="Images/airline-06.jpg"/>
                 </div>
                 <div class="mainbody-04">
                     <p>Due to the complexity of the industry and silos within the organisation, it was rare for a person to have a complete picture. Therefore, a living service blueprint was created to have a unified view on the backstage processes on how services were orchestrated between the different business units and the various dependecies in the system. Additionally, the blueprint was created to be editable so that the team could continuously update it.</p>
                 </div>
         </div>
-    </html>
+    </body>
+</html>
