--- a/aubergine.html
+++ b/aubergine.html
@@ -28,8 +28,8 @@
         </nav>
         <div class="projectheader">
             <h4>CASE STUDY - 2016</h4>
-           <h1>Comfort in a Puff</h1>
-           <img src="Images/aubergine-01.jpg"/>
+            <h1>Comfort in a Puff</h1>
+            <img src="Images/aubergine-01.jpg"/>
         </div>
         <div class="projectinfo">
             <div class="mainbody-01">
@@ -42,15 +42,15 @@
                 <p class="secondarydetails">Product Development <br> Marketing 
                 <p class="primarydetails">Team</p>
                 <p class="secondarydetails">Studio Aubergine</p>
-                <p class="thirddetails">-</p>
-                <p class="primarydetails">Winner</p>
-                <p class="secondarydetails">Asia Design Prize 2018</p>
-                <p class="primarydetails">Silver</p>
-                <p class="secondarydetails">'A' Design Award 2018</p>
-                <p class="primarydetails">Design Force Brightens The City Of The Future</p>
-                <p class="secondarydetails">Hebei International Industrial Design Week 2018</p>
-                <p class="primarydetails">Design Future/Now Exhibtion</p>
-                <p class="secondarydetails">Singapore Design Week 2017</p>
+                <hr>
+                <p class="secondarydetails02">Winner</p>
+                <p class="primarydetails02">Asia Design Prize 2018</p>
+                <p class="secondarydetails02">Silver</p>
+                <p class="primarydetails02">'A' Design Award 2018</p>
+                <p class="secondarydetails02">Design Force Brightens The City Of The Future</p>
+                <p class="primarydetails02">Hebei International Industrial Design Week 2018</p>
+                <p class="secondarydetails02">Design Future/Now Exhibtion</p>
+                <p class="primarydetails02">Singapore Design Week 2017</p>
             </div>
         </div>
         <div class="projectprogress">
@@ -78,5 +78,5 @@
             <div class="designpicture-01">
                 <img class="imageflush" src="Images/aubergine-02.jpg"/>
          </div>
-    </div>
+    </body>
 </html>
