--- a/dbs.html
+++ b/dbs.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <!-- Head includes files such as css and js, wont be seen -->
@@ -58,7 +57,10 @@
             <p>Additionally, a management decision was made to combine both DBS and POSB exisiting designs for the ATM; moving towards a 'brand-less' screen state. The screens had to look differentiated enough so that it did not look too similar to either of the two brands. In addition, it should not encroach with other banks visual language.</p>
         </div>
     </div>
-    <img src="Images/dbs-06.jpg">
+    <div class="rightcontainer">
+        <img class="captionmb" src="Images/dbs-06.jpg">
+        <span>Studying the various banks visual language</span>
+    </div>
     <div class="mainbody-03">
         <p>Drawing from other existing platfoms within the bank ecosystem and from our study of the major banks in Singapore, we decided to experiment with the different tonal value of greys. Grey connoted a sense of maturity and dependability and was a colour that was not used by any of the other banks.</p>
     </div>
@@ -67,7 +69,10 @@
         <h5 class="grey">USER TESTING</h5>
         <p>Before rolling out the new system to the public, a group of participants were selected to use, test and provide feedback on the new changes in the ATM+ and BTM+ user interface design. In the hour long session, participants were provided with a series of tasks (Eg. Withdraw $50 from your POSB Savings Account). Once a task was completed, questions were posed to the participants based on their actions to better understand their thought process. At different points of the task flow, A/B testing was conducted to get a grasp of users' preferences and test understandability of the screens.</p>
     </div>
-    <img src="Images/dbs-03.jpg">
+    <div class="rightcontainer">
+        <img class="captionmb" src="Images/dbs-08.png">
+        <span>Testing the new ATM+ and BTM+ designs</span>
+    </div>
     <h3>The Design</h3>
     <div class="projectdesign-01">
         <div class="designpicture-01">
@@ -93,4 +98,5 @@
                 <p>During the user testing, one of the users pointed out that if it was too grey, users might think that the machine is faulty. Thus, we tweaked the grey to be warmer to make it feel more personal and inviting. Furthermore, we decided to add in a colour highlight which was taken from DBS Wealth Management.</p>
             </div>
     </div>
+    </body>
 </html>
