--- a/doodles.html
+++ b/doodles.html
@@ -51,14 +51,36 @@
     <!-- Grid -->
     <div class="grid">
       <div class="row">
-        <div class="column nohover">
+        <div class="column smallgap nohover">
           <img class="gif" src="Gifs/01.gif" />
         </div>
-        <div class="column middle nohover">
+        <div class="column middle smallgap nohover">
           <img class="gif" src="Gifs/02.gif" />
         </div>
+        <div class="column smallgap nohover">
+          <img class="gif" src="Gifs/03.gif" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="column smallgap nohover">
+          <img class="gif" src="Gifs/04.gif" />
+        </div>
+        <div class="column middle smallgap nohover">
+          <img class="gif" src="Gifs/05.gif" />
+        </div>
+        <div class="column smallgap nohover">
+          <img class="gif" src="Gifs/06.gif" />
+        </div>
+      </div>
+      <div class="row">
         <div class="column nohover">
-          <img class="gif" src="Gifs/01.gif" />
+          <img class="gif" src="Gifs/07.gif" />
+        </div>
+        <div class="column middle nohover">
+          <img class="gif" src="Gifs/08.gif" />
+        </div>
+        <div class="column nohover">
+          <img class="gif" src="Gifs/09.gif" />
         </div>
       </div>
     </div>
