--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
           <div class="box">
             <img src="Images/coming.png" />
           </div>
-          <h4>Upskilling Digital <br />Proficiency</h4>
-          <h5>Petronas</h5>
-        </div>
-        <div class="column middle">
-          <div class="box">
-            <img src="Images/bizregistry-00.jpg" />
-          </div>
           <h4>The Future of <br />Retail Banking</h4>
-          <h5>Accenture</h5>
+          <h5>Fjord</h5>
         </div>
+        <a href="switch.html"
+          ><div class="column middle">
+          <div class="box">
+            <img src="Images/switch-00.jpg" />
+          </div>
+          <h4>Upskilling Digital <br />Proficiency</h4>
+          <h5>Oil and Gas Company</h5>
+        </div></a>
         <a href="pivot.html"
           ><div class="column">
             <div class="box">
@@ -72,8 +73,7 @@
             </div>
             <h4><br />Visualizing Data</h4>
             <h5>Oil and Gas Company</h5>
-          </div></a
-        >
+          </div></a>
       </div>
 
       <div class="row">
@@ -98,6 +98,7 @@
             <h5>DBS</h5>
           </div></a
         >
+        <a href="afford.html">
         <div class="column">
           <div class="box">
             <img src="Images/afford-00.jpg" />
@@ -107,7 +108,7 @@
             in a Cashless Society
           </h4>
           <h5>Afford</h5>
-        </div>
+        </div></a>
       </div>
 
       <div class="row ">
