--- a/pivot.html
+++ b/pivot.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <!-- Head includes files such as css and js, wont be seen -->
@@ -56,11 +55,17 @@
                 <p>Building upon what was done in the previous phase, the team worked on a list of key jobs that were identified by the former team. These key jobs were tackled in 2 weeks sprint which uncovered different sets of user needs. Each sprint started off with an ideation workshop with staff from different parts of the organisation. Though each ideation workshop was different, it broadly involved understanding the current work process (tasks, data points, blockers, systems etc.), ideas for improvements and prioritisation of features.</p>
             </div>
         </div>
-        <img src="Images/pivot-01.png"/>
+        <div class="rightcontainer">
+            <img class="captionmb" src="Images/pivot-01.png"/>
+            <span>Ideation workshops with the staff</span>
+        </div>
         <div class="mainbody-03">
             <p>Before heading to digital prototypes, quick paper prototypes were created to get a better grasp of the user flows which helped to align the team on the screens that were needed. Subsequently, these digital prototypes were shown to relevant users for feedback.</p>
         </div>
-        <img src="Images/pivot-02.png"/>
+        <div class="rightcontainer">
+            <img class="captionmb" src="Images/pivot-02.png"/>
+            <span>Quick and dirty prototypes</span>
+        </div>
         <h3>The Design</h3>
         <div class="projectdesign-01">
             <div class="designpicture-01">
@@ -86,4 +91,5 @@
                     <p>From the board room to the plant workers on the ground, PIVOT had to acommodate for different types of users. The upper management had a tendency to check reports and key KPIs on their phones. Therefore, it was crucial that the platform was glanceable to know the overall health of the assets; with the option to drill down to the root cause when needed.</p>
                 </div>
         </div>
+    </body>
 </html>
