Working on responsiveness and about page

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -39,33 +40,40 @@
       </div>
     </nav>
 
-    <h2 class="title">Hello again!</h2>
-
-    <div class="mainbody-02">
-      <p class="spacing">My name is John Teo.</p>
-      <p class="spacing">
-        I am currently a service and interaction designer at
-        <a href="https://www.fjordnet.com/"> Fjord Singapore </a>.
-      </p>
-      <p class="spacing">
-        Before that, I worked as a product designer at
-        <a href="https://www.dbs.com.sg/"> DBS </a> and
-        <a href="https://www.spgroup.com.sg/"> SP Group </a>; while co-founding
-        my own mini creative studio,
-        <a href="https://www.studioaubergine.design/"> Studio Aubergine </a>.
-      </p>
-      <p class="spacing">
-        Through working with various teams, I discovered that nothing makes me
-        happier than working with a team who believes in their product; and the
-        value it creates for people.
-      </p>
-      <p class="spacing">
-        If you need to get in touch or want to learn more about what I do, drop
-        me an email at
-        <a href="mailto:teorzjohn@gmail.com?Subject=Hello%20there" target="_top"
-          >teorzjohn@gmail.com</a
-        >
-      </p>
+    <div class="aboutwrapper">
+      <div>
+        <h2 class="title">Hello again!</h2>
+        <div class="about">
+          <p class="spacing">My name is John Teo.</p>
+          <p class="spacing">
+            I am currently a service and interaction designer at
+            <a href="https://www.fjordnet.com/"> Fjord Singapore</a>.
+          </p>
+          <p class="spacing">
+            Before that, I worked as a product designer at
+            <a href="https://www.spgroup.com.sg/"> SP Group</a> and
+            <a href="https://www.dbs.com.sg/"> DBS </a> while also co-founding
+            my own mini creative studio,
+            <a href="https://www.studioaubergine.design/"> Studio Aubergine </a
+            >.
+          </p>
+          <p class="spacing">
+            Through working with various teams, I discovered that nothing makes
+            me happier than working with a team who believes in their product;
+            and the value it creates for people.
+          </p>
+          <p class="spacing">
+            If you need to get in touch or want to learn more about what I do,
+            drop me an email at
+            <a
+              href="mailto:teorzjohn@gmail.com?Subject=Hello%20there"
+              target="_top"
+              >teorzjohn@gmail.com</a
+            >
+          </p>
+        </div>
+      </div>
+      <img src="Images/johnteo.jpg" />
     </div>
     <footer>
       <div>
