--- a/afford.html
+++ b/afford.html
@@ -1,88 +1,144 @@
 <!DOCTYPE html>
 <html>
-    <!-- Head includes files such as css and js, wont be seen -->
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-        <title>John Teo Portfolio</title>
-         <!-- Title is the name you see on the tab/link -->
-         <link rel="stylesheet" type="text/css" href="style.css">
-         <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet">
-    </head>
+  <!-- Head includes files such as css and js, wont be seen -->
+  <head>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1"
+    />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <title>John Teo Portfolio</title>
+    <!-- Title is the name you see on the tab/link -->
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-    <!-- Body is the content that people see on the website -->
-    <body>
-        <nav>
-            <div class="navcontent">
-                <div>
-                    <a href="index.html"><p class="logo">JOHN</p></a>
-                </div>
-                <div>
-                    <ul class="navigationlist">
-                        <!-- a means links -->
-                        <li><a href="index.html"><p>Works</p></a></li>
-                        <li><a href="doodles.html"><p>Doodles</p></a></li>
-                        <li><a href="about.html"><p>About</p></a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+  <!-- Body is the content that people see on the website -->
+  <body>
+    <nav>
+      <div class="navcontent">
+        <div>
+          <a href="index.html"><p class="logo">JOHN</p></a>
+        </div>
+        <div>
+          <ul class="navigationlist">
+            <!-- a means links -->
+            <li>
+              <a href="index.html"><p>Works</p></a>
+            </li>
+            <li>
+              <a href="doodles.html"><p>Doodles</p></a>
+            </li>
+            <li>
+              <a href="about.html"><p>About</p></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-         <div class="projectheader">
-            <h4>CASE STUDY - 2018</h4>
-           <h1>Financial Empowerment <br>in a Cashless Society</h1>
-           <img src="Images/afford-00.jpg"/>
+    <div class="projectheader">
+      <h4>CASE STUDY - 2018</h4>
+      <h1>Financial Empowerment <br />in a Cashless Society</h1>
+      <img src="Images/afford-00.jpg" />
     </div>
     <div class="projectinfo">
-        <div class="mainbody-01">
-            <p>Afford was designed out of the concern for our tendency to spend mindlessly with today’s cashless payment processes. Trading convenience for attention, it emphasises on the amount we are spending and heightens our awareness towards it. This is done by activating different senses within the payment process making users more conscious of the transaction taking place; in an effort to deter users from making another impulse purchase.</p>
-            <h5 class="grey02">THE CHALLENGE</h5>
-            <h2>How might we bring consciousness to payments in a cashless world?</h2>
-        </div>
-        <div class="projectstatus">
-            <p class="primarydetails">My Role</p>
-            <p class="secondarydetails">Research <br> Wireframing <br> Prototyping <br> User testing </p> 
-            <hr> 
-            <p class="secondarydetails02">Gold Winner</p>
-            <p class="primarydetails02">Indigo Design Award 2019</p>
-            <p class="secondarydetails02">Global Grad Show</p>
-            <p class="primarydetails02">Dubai Design Week 2018</p>
-        </div>
+      <div class="mainbody-01">
+        <p>
+          Afford was designed out of the concern for our tendency to spend
+          mindlessly with today’s cashless payment processes. Trading
+          convenience for attention, it emphasises on the amount we are spending
+          and heightens our awareness towards it. This is done by activating
+          different senses within the payment process making users more
+          conscious of the transaction taking place; in an effort to deter users
+          from making another impulse purchase.
+        </p>
+        <h5 class="grey02">THE CHALLENGE</h5>
+        <h2>
+          How might we bring consciousness to payments in a cashless world?
+        </h2>
+      </div>
+      <div class="projectstatus">
+        <p class="primarydetails">My Role</p>
+        <p class="secondarydetails">
+          Research <br />
+          Wireframing <br />
+          Prototyping <br />
+          User testing
+        </p>
+        <hr />
+        <p class="secondarydetails02">Gold Winner</p>
+        <p class="primarydetails02">Indigo Design Award 2019</p>
+        <p class="secondarydetails02">Global Grad Show</p>
+        <p class="primarydetails02">Dubai Design Week 2018</p>
+      </div>
     </div>
     <div class="projectprogress">
-        <div class="projecttitle">
-            <h3>Glimpse into the Process</h3>
-        </div>
-        <div class="mainbody-02">
-            <p>To study the effects of mobile-based payments, a total of 30 qualitative interviews were conducted with people from advanced cashless societies: China, Sweden, United Kingdom, Canada and Norway. Many cited the draw to go cashless was due to the convenience that it affords. However, convenience is a double edged sword. By making it effortless, many recognised that it was also easier to spend more than necessary. Going cashless effectively meant anaesthetising the pain of paying as it didn’t feel like they were giving up anything, unlike paying with cash where they had to hand over the bill.</p>
-        </div>
+      <div class="projecttitle">
+        <h3>Glimpse into the Process</h3>
+      </div>
+      <div class="mainbody-02">
+        <p>
+          To study the effects of mobile-based payments, a total of 30
+          qualitative interviews were conducted with people from advanced
+          cashless societies: China, Sweden, United Kingdom, Canada and Norway.
+          Many cited the draw to go cashless was due to the convenience that it
+          affords. However, convenience is a double edged sword. By making it
+          effortless, many recognised that it was also easier to spend more than
+          necessary. Going cashless effectively meant anaesthetising the pain of
+          paying as it didn’t feel like they were giving up anything, unlike
+          paying with cash where they had to hand over the bill.
+        </p>
+      </div>
     </div>
     <div class="rightcontainer">
-        <img class="captionmb" src="Images/afford-02.png">
-        <span>Interviewing participants from advanced cashless societies</span>
+      <img class="captionmb" src="Images/afford-02.png" />
+      <span>Interviewing participants from advanced cashless societies</span>
     </div>
     <div class="mainbody-03">
-        <p>Playing on all the different senses from tactile to auditory to visual, interactions were created and subsequently tested to see what worked best for users in triggering the mind to make them more aware of the transacted amount. The prototypes were all created through various prototyping tools: Framer, Invision, Flinto and videos (depending on what worked the fastest and best suited for the interaction required).</p>
+      <p>
+        Playing on all the different senses from tactile to auditory to visual,
+        interactions were created and subsequently tested to see what worked
+        best for users in triggering the mind to make them more aware of the
+        transacted amount. The prototypes were all created through various
+        prototyping tools: Framer, Invision, Flinto and videos (depending on
+        what worked the fastest and best suited for the interaction required).
+      </p>
     </div>
     <div class="rightcontainer">
-        <img class="captionmb" src="Images/afford-03.jpg">
-        <span>Ideation of different payment interactions</span>
+      <img class="captionmb" src="Images/afford-03.jpg" />
+      <span>Ideation of different payment interactions</span>
     </div>
     <div class="mainbody-03">
-        <h5 class="grey">USER TESTING</h5>
-        <p>In order to test the user’s emotional response towards the proposed interactions, a different type of user testing had to be used. Based on the PrEmo tool, instead of relying on the use of words, users selected their emotions with the use of expressive cartoon animations.</p>
+      <h5 class="grey">USER TESTING</h5>
+      <p>
+        In order to test the user’s emotional response towards the proposed
+        interactions, a different type of user testing had to be used. Based on
+        the PrEmo tool, instead of relying on the use of words, users selected
+        their emotions with the use of expressive cartoon animations.
+      </p>
     </div>
     <div class="rightcontainer">
-        <img class="captionmb" src="Images/afford-04.png">
-        <span>User testing Results: The Experience of Paying</span>
+      <img class="captionmb" src="Images/afford-04.png" />
+      <span>User testing Results: The Experience of Paying</span>
     </div>
     <h3>The Design</h3>
     <div class="projectdesign-01">
-        <div class="designpicture-01">
-            <img class="imageflush" src="Gifs/afford-01.gif"/>
-        </div>
-        <div class="mainbody-04">
-            <p>Playing on the metaphor of throwing away money, users have to shake to pay. This created an experience that was convenient yet memorable, making users more conscious of the money that is being transacted. In addition, by watching their balance deplete, it recreated the sense of guilt when users paid with cash.</p>
-        </div>
+      <div class="designpicture-01">
+        <img class="imageflush" src="Gifs/afford-01.gif" />
+      </div>
+      <div class="mainbody-04">
+        <p>
+          Playing on the metaphor of throwing away money, users have to shake to
+          pay. This created an experience that was convenient yet memorable,
+          making users more conscious of the money that is being transacted. In
+          addition, by watching their balance deplete, it recreated the sense of
+          guilt when users paid with cash.
+        </p>
+      </div>
     </div>
-    </body>
+  </body>
 </html>
