--- a/aubergine.html
+++ b/aubergine.html
@@ -3,6 +3,7 @@
     <!-- Head includes files such as css and js, wont be seen -->
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
         <title>John Teo Portfolio</title>
          <!-- Title is the name you see on the tab/link -->
          <link rel="stylesheet" type="text/css" href="style.css">
