--- a/doodles.html
+++ b/doodles.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -39,49 +40,45 @@
       </div>
     </nav>
 
-    <h2 class="title">I like trying new things</h2>
+    <h2 class="title">I like doodling interaction ideas</h2>
 
     <div class="mainbody-02">
       <h4 class="subheader">
-        From testing new softwares to prototyping random ideas, these are some
-        stuff that I have worked on in my free time.
+        Every now and then I would work on random ideas which also allows me to
+        test new prototyping softwares.
       </h4>
     </div>
 
     <!-- Grid -->
     <div class="grid">
-      <div class="row">
-        <div class="column smallgap nohover">
-          <img class="gif" src="Gifs/01.gif" />
-        </div>
-        <div class="column middle smallgap nohover">
-          <img class="gif" src="Gifs/02.gif" />
-        </div>
-        <div class="column smallgap nohover">
-          <img class="gif" src="Gifs/03.gif" />
-        </div>
+      <div class="column  nohover">
+        <img class="gif" src="Gifs/01.gif" />
       </div>
-      <div class="row">
-        <div class="column smallgap nohover">
-          <img class="gif" src="Gifs/04.gif" />
-        </div>
-        <div class="column middle smallgap nohover">
-          <img class="gif" src="Gifs/05.gif" />
-        </div>
-        <div class="column smallgap nohover">
-          <img class="gif" src="Gifs/06.gif" />
-        </div>
+      <div class="column middle  nohover">
+        <img class="gif" src="Gifs/02.gif" />
       </div>
-      <div class="row">
-        <div class="column nohover">
-          <img class="gif" src="Gifs/07.gif" />
-        </div>
-        <div class="column middle nohover">
-          <img class="gif" src="Gifs/08.gif" />
-        </div>
-        <div class="column nohover">
-          <img class="gif" src="Gifs/09.gif" />
-        </div>
+      <div class="column  nohover">
+        <img class="gif" src="Gifs/03.gif" />
+      </div>
+
+      <div class="column  nohover">
+        <img class="gif" src="Gifs/04.gif" />
+      </div>
+      <div class="column middle  nohover">
+        <img class="gif" src="Gifs/05.gif" />
+      </div>
+      <div class="column  nohover">
+        <img class="gif" src="Gifs/06.gif" />
+      </div>
+
+      <div class="column nohover">
+        <img class="gif" src="Gifs/07.gif" />
+      </div>
+      <div class="column nohover">
+        <img class="gif" src="Gifs/08.gif" />
+      </div>
+      <div class="column nohover">
+        <img class="gif" src="Gifs/09.gif" />
       </div>
     </div>
     <footer>
