--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap"
       rel="stylesheet"
+      type="text/css"
     />
   </head>
 
@@ -39,67 +41,73 @@
       </div>
     </nav>
 
-    <h2 class="title">Hello. I'm John Teo, a designer who blah blah.</h2>
+    <h2 class="title">Hello. I'm John Teo, a designer.</h2>
 
     <div class="mainbody-02">
       <h4 class="subheader">
-        Currently a service and interaction designer at Fjord Singapore. Here
-        are some of the works I've done.
+        Currently a service and interaction designer at
+        <a href="https://www.fjordnet.com/">Fjord Singapore</a>. Here are some
+        of the works I've done.
       </h4>
     </div>
 
     <!-- Grid -->
     <div class="grid">
-      <div class="row">
-        <div class="column">
+      <div class="column">
+        <a href="futurebanking.html">
           <div class="box">
             <img src="Images/coming.png" />
           </div>
           <h4>The Future of <br />Retail Banking</h4>
           <h5>Fjord</h5>
-        </div>
-        <a href="switch.html"
-          ><div class="column middle">
+        </a>
+      </div>
+
+      <div class="column">
+        <a href="switch.html">
           <div class="box">
             <img src="Images/switch-00.jpg" />
           </div>
           <h4>Upskilling Digital <br />Proficiency</h4>
           <h5>Oil and Gas Company</h5>
-        </div></a>
-        <a href="pivot.html"
-          ><div class="column">
-            <div class="box">
-              <img src="Images/oilandgas-00.jpg" />
-            </div>
-            <h4><br />Visualizing Data</h4>
-            <h5>Oil and Gas Company</h5>
-          </div></a>
+        </a>
       </div>
 
-      <div class="row">
-        <a href="airline.html"
-          ><div class="column">
-            <div class="box">
-              <img src="Images/airline-00.jpg" />
-            </div>
-            <h4>
-              A Beacon for Better <br />
-              Customer Experience
-            </h4>
-            <h5>Airline</h5>
-          </div></a
-        >
-        <a href="dbs.html"
-          ><div class="column middle">
-            <div class="box">
-              <img src="Images/dbs-00.jpg" />
-            </div>
-            <h4><br />Redesigning the ATM</h4>
-            <h5>DBS</h5>
-          </div></a
-        >
+      <div class="column">
+        <a href="pivot.html">
+          <div class="box">
+            <img src="Images/oilandgas-00.jpg" />
+          </div>
+          <h4><br />Visualizing Data</h4>
+          <h5>Oil and Gas Company</h5>
+        </a>
+      </div>
+
+      <div class="column">
+        <a href="airline.html">
+          <div class="box">
+            <img src="Images/airline-00.jpg" />
+          </div>
+          <h4>
+            A Beacon for Better <br />
+            Customer Experience
+          </h4>
+          <h5>Airline</h5>
+        </a>
+      </div>
+
+      <div class="column">
+        <a href="dbs.html">
+          <div class="box">
+            <img src="Images/dbs-00.jpg" />
+          </div>
+          <h4><br />Redesigning the ATM</h4>
+          <h5>DBS</h5>
+        </a>
+      </div>
+
+      <div class="column">
         <a href="afford.html">
-        <div class="column">
           <div class="box">
             <img src="Images/afford-00.jpg" />
           </div>
@@ -108,18 +116,16 @@
             in a Cashless Society
           </h4>
           <h5>Afford</h5>
-        </div></a>
+        </a>
       </div>
 
-      <div class="row ">
+      <div class="column">
         <a href="aubergine.html">
-          <div class="column">
-            <div class="box">
-              <img src="Images/aubergine-00.jpg" />
-            </div>
-            <h4><br />Comfort in a Puff</h4>
-            <h5>Studio Aubergine</h5>
+          <div class="box">
+            <img src="Images/aubergine-00.jpg" />
           </div>
+          <h4><br />Comfort in a Puff</h4>
+          <h5>Studio Aubergine</h5>
         </a>
       </div>
     </div>
