Portfolio third draft

--- a/switch.html
+++ b/switch.html
@@ -98,7 +98,7 @@
     </div>
     <div class="projectdesign-02">
         <div class="mainbody-05">
-            <p>XX</p>
+            <p>To much of our surpise, the leaderboard was very popular and users made it a habit to learn every day to climb up the leaderboard. However, many users also felt deflated as the top learners were seemingly out of reach. Therefore, seasonal and event leaderboards were added to foster healthy competition while giving every user a fair chance to compete among each other.</p>
         </div>
         <div class="designpicture-01">
             <img class="imageflush" src="Images/coming.png"/>
